--- a/werf.yaml
+++ b/werf.yaml
@@ -2,10 +2,10 @@ configVersion: 1
 project: clickhouse-exporter
 ---
 artifact: builder
-from: golang:1.18-buster
+from: golang:1.21-bullseye
 git:
 - url: https://github.com/altinity/clickhouse-operator
-  tag: '0.18.5'
+  tag: release-0.22.2
   to: /src/clickhouse-operator
 - add: /
   to: /src/clickhouse-exporter
@@ -19,12 +19,12 @@ git:
     - '**/*'
 shell:
   beforeInstall:
-    go install -v github.com/prometheus/promu@v0.13.0
+    go install -v github.com/prometheus/promu@v0.15.0
   install: |
     cd /src/clickhouse-exporter && /go/bin/promu build -v --prefix build
 ---
 image: clickhouse-exporter
-from: debian:buster-slim
+from: debian:bullseye-slim
 docker:
   CMD: ["/clickhouse-exporter"]
 import:
